// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render — width responsiveness > snapshot at width=40 1`] = `
"PHYSICAL DISKS
ID        MODEL                SIZE (GiB)  USED (GiB)  FREE (GiB)  USE%  BAR       
/dev/sda  Samsung SSD 860 EVO       476.9       223.5       253.4   47%  █████▓▓▓▓▓

FILESYSTEMS
MOUNT  DEVICE     FSTYPE  SIZE (GiB)  USED (GiB)  FREE (GiB)  USE%  BAR       
/      /dev/sda1  ext4         100.0        33.0        67.0   33%  ███▓▓▓▓▓▓▓"
`;

exports[`render — width responsiveness > snapshot at width=80 1`] = `
"PHYSICAL DISKS
ID        MODEL                SIZE (GiB)  USED (GiB)  FREE (GiB)  USE%  BAR       
/dev/sda  Samsung SSD 860 EVO       476.9       223.5       253.4   47%  █████▓▓▓▓▓

FILESYSTEMS
MOUNT  DEVICE     FSTYPE  SIZE (GiB)  USED (GiB)  FREE (GiB)  USE%  BAR         
/      /dev/sda1  ext4         100.0        33.0        67.0   33%  ████▓▓▓▓▓▓▓▓"
`;

exports[`render — width responsiveness > snapshot at width=120 1`] = `
"PHYSICAL DISKS
ID        MODEL                SIZE (GiB)  USED (GiB)  FREE (GiB)  USE%  BAR                           
/dev/sda  Samsung SSD 860 EVO       476.9       223.5       253.4   47%  ██████████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓

FILESYSTEMS
MOUNT  DEVICE     FSTYPE  SIZE (GiB)  USED (GiB)  FREE (GiB)  USE%  BAR                           
/      /dev/sda1  ext4         100.0        33.0        67.0   33%  ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓"
`;

exports[`render — width responsiveness > snapshot at width=200 1`] = `
"PHYSICAL DISKS
ID        MODEL                SIZE (GiB)  USED (GiB)  FREE (GiB)  USE%  BAR                           
/dev/sda  Samsung SSD 860 EVO       476.9       223.5       253.4   47%  ██████████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓

FILESYSTEMS
MOUNT  DEVICE     FSTYPE  SIZE (GiB)  USED (GiB)  FREE (GiB)  USE%  BAR                           
/      /dev/sda1  ext4         100.0        33.0        67.0   33%  ██████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓"
`;
